Renamed Header.h to ANNTest.h, added neuron class and tested basic functionality.

--- a/prog1/ANNTest/ANNTest.vcxproj
+++ b/prog1/ANNTest/ANNTest.vcxproj
@@ -22,7 +22,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="ANNTest.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2EA9315A-F585-46FA-B4C5-CEA2BAB9F994}</ProjectGuid>
