added header file and class for parsing parameter files.

--- a/prog1/ANNTrain/ANNTrain.vcxproj
+++ b/prog1/ANNTrain/ANNTrain.vcxproj
@@ -20,7 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ParameterFileReader.cpp" />
     <ClCompile Include="ParseCSV.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1B6A8B27-D0FE-4563-A5A7-7E4B2C321002}</ProjectGuid>
