Added parameter file reading into the cross validate program.

--- a/prog1/CrossValidate/CrossValidate.vcxproj
+++ b/prog1/CrossValidate/CrossValidate.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ParameterFileReader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4A5ED401-A9F0-42AE-95CC-BFCBE63EECB4}</ProjectGuid>
