Created ANNTrainer object for training neural net.

--- a/prog1/ANNTrain/ANNTrain.vcxproj
+++ b/prog1/ANNTrain/ANNTrain.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ANNTrainer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ParameterFileReader.cpp" />
     <ClCompile Include="ParseCSV.cpp" />
