Working on training. Next steps are calculating deltaError and new weights.

--- a/prog1/ANNTrain/ANNTrain.vcxproj
+++ b/prog1/ANNTrain/ANNTrain.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="ANNTrainer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="ParameterFileReader.cpp" />
     <ClCompile Include="ParseCSV.cpp" />
   </ItemGroup>
