Testing should work once training is fixed.

--- a/prog1/ANNTest/ANNTest.vcxproj
+++ b/prog1/ANNTest/ANNTest.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ANNTester.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="ParameterFileReader.cpp" />
+    <ClCompile Include="ParseCSV.cpp" />
+    <ClCompile Include="WeightsIO.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ANNTest.h" />
     <ClInclude Include="Header.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
