--- a/prog1/CrossValidate/CrossValidate.vcxproj
+++ b/prog1/CrossValidate/CrossValidate.vcxproj
@@ -19,8 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ANNTrainer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="ParameterFileReader.cpp" />
+    <ClCompile Include="ParseCSV.cpp" />
+    <ClCompile Include="WeightsIO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
