--- a/prog1/ANNTrain/ANNTrain.vcxproj
+++ b/prog1/ANNTrain/ANNTrain.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="ParameterFileReader.cpp" />
     <ClCompile Include="ParseCSV.cpp" />
+    <ClCompile Include="WeightsIO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
