Working on crossvalidate.

--- a/prog1/CrossValidate/CrossValidate.vcxproj
+++ b/prog1/CrossValidate/CrossValidate.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ANNTester.cpp" />
     <ClCompile Include="ANNTrainer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Neuron.cpp" />
